XO_Project_UAT/Project--XOGrp--UAT/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Concierge_Venue_Alias__c</fullName>
        <label>Concierge Venue Alias</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>afasulo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jtocchet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cchuy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>gborger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kmarino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jhaven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kotoole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lableson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lschneid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nanand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>opeck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pbittner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sniedzwi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Sponsorship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Phase 1.0.6 Concierge - indicate that an account record is managed by the concierge national team so that we do not accidentally email accounts that are already interested in the program.</description>
        <label>Corporate Sponsorship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditHold__c</fullName>
        <description>Text representation of whether the vendor is on credit hold or not based on Customer Type</description>
        <label>Credit Hold</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CreditStatus__c</fullName>
        <description>Updates after batch process to Credit Hold</description>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Good Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Credit Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Hold__c</fullName>
        <description>Flag to indicate if the vendor is on credit hold or not based on text Credit Hold field</description>
        <formula>IF(ISPICKVAL(CreditHold__c,&apos;Yes&apos;) , TRUE , FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CuratedDescription__c</fullName>
        <description>Phase 1</description>
        <label>Curated Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CurrentAdvertisingCompany__c</fullName>
        <label>Current Advertising Company</label>
        <picklist>
            <picklistValues>
                <fullName>WeddingWire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Bright Lights</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <description>Phase 1 National</description>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <description>Customer status in Great Plains</description>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANKRUPTCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBP-In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC CHARGEBACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNCXLD BAD PAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREDIT HOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB&amp;W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REG/NAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUT OF BUSINESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEST ACCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH RETURN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_on_Payment_Arrangement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether a customer is on Payment Arrangement or not.</description>
        <label>Customer on Payment Arrangement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DE_Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the record should follow the &quot;drip in&quot; approach or can be distributed immediately by Distribution Engine.  Generally, this is checked on older records.</description>
        <label>DE Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DE_Stealth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate a &quot;cherry picked&quot; lead for Distribution Engine to use in testing in production.</description>
        <label>DE Stealth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Since_Past_Due__c</fullName>
        <description>The # of days between the past due date and today.</description>
        <formula>TODAY() -  Longest_Past_Due_Date__c</formula>
        <label>Days Since Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desc__c</fullName>
        <description>Phase 1 National</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disqualification_Reason__c</fullName>
        <description>Reason the vendor was sales disqualified
            Plan to Deprecated for CSP-2731</description>
        <label>Disqualification Reason(deprecated)</label>
        <picklist>
            <controllingField>Qualification_Status__c</controllingField>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DoNotBulkEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating the vendor has requested to stop receiving bulk emails</description>
        <label>Do Not Bulk Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DynamicsAccID__c</fullName>
        <description>Unique key (GUID) of the storefront in TKPro</description>
        <externalId>true</externalId>
        <label>Location ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DynamicsLeadID__c</fullName>
        <description>GUID of the originating Lead</description>
        <externalId>true</externalId>
        <label>Dynamics Lead ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESign_Account_Name__c</fullName>
        <description>Account name, reduced to 50 characters in length</description>
        <formula>LEFT(Name , 50)</formula>
        <label>ESign Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Captured the Email field that existed in CRM Dynamics. Also is used to fill in the Partners users in Partners when a storefront is fulfilled from Salesforce.</description>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Evaluate_for_Distribution__c</fullName>
        <description>CSP-3514</description>
        <label>Evaluate for Distribution</label>
        <picklist>
            <picklistValues>
                <fullName>Evaluate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Evaluate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Changed_Date__c</fullName>
        <description># of days since the Expiration Date was changed</description>
        <label>Expiration Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Registry__c</fullName>
        <description>Contracted flat fee we earn for Registry services</description>
        <label>Fee/Registry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldUnmap__c</fullName>
        <formula>IF(Strategy_Specialist__c &lt;&gt; Owner.Strategy_Specialist__c,&quot;&lt;AS&gt;&quot;,&quot;&quot;)
            &amp;IF(CBBS__c &lt;&gt; Owner.ARR__c,&quot;&lt;CBSS&gt;&quot;,&quot;&quot;)
            &amp;IF(SOR__c&lt;&gt; Owner.SOR__c,&quot;&lt;SOR&gt;&quot;,&quot;&quot;)
            &amp;IF(value(BillingPostalCode)&lt;&gt; value(Zip__r.ZipCode__c),&quot;&lt;Zip&gt;&quot;,&quot;&quot;)</formula>
        <label>Field Unmap</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfill_Storefront__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag set by the system to trigger storefront claiming</description>
        <label>Claim Storefront</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates whether a storefront fulfillment request has been satisfied</description>
        <inlineHelpText>Checked if the Storefront has been fulfilled in Partners.</inlineHelpText>
        <label>Fulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Data__c</fullName>
        <description>Details of the TKPro sign-up request</description>
        <inlineHelpText>Used to hold Fulfillment Information received from Partners through the REST API</inlineHelpText>
        <label>Fulfillment Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FullAddress__c</fullName>
        <description>This is a combination of the Street/ City/ State/ Zip/ Country</description>
        <formula>BillingStreet &amp; &quot; &quot; &amp; BillingCity &amp;  &quot;, &quot; &amp;  BillingState  &amp; &quot; &quot; &amp;  BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Doc_ID__c</fullName>
        <description>External unique identifier from the Concierge sales spreadsheet</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique identifier from the sales spreadsheet</inlineHelpText>
        <label>Google Doc ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ignore_Parent_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to use this account&apos;s Dynamics Location Id as both the COMPANY and LOCATION Id when fulfilling to Partners vs its parent</description>
        <label>Ignore Parent Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Set__c</fullName>
        <formula>IF(
            LEN(Google_Doc_ID__c) &gt; 0,
            IF(
            BEGINS(Google_Doc_ID__c,&apos;NY&apos;),
            1,
            IF(
            OR(BEGINS(Google_Doc_ID__c,&apos;NE&apos;), BEGINS(Google_Doc_ID__c,&apos;LR&apos;), BEGINS(Google_Doc_ID__c,&apos;PA&apos;)),
            2,
            IF(
            OR(BEGINS(Google_Doc_ID__c,&apos;CON-GA-&apos;), BEGINS(Google_Doc_ID__c,&apos;CON-CR-&apos;), BEGINS(Google_Doc_ID__c,&apos;CON-DC-&apos;)),
            3,
            IF(
            BEGINS(Google_Doc_ID__c,&apos;CON-FL&apos;),
            4,
            IF(
            BEGINS(Google_Doc_ID__c,&apos;CON-TX&apos;),
            5,
            IF(
            OR(BEGINS(Google_Doc_ID__c,&apos;CON-SCA&apos;),BEGINS(Google_Doc_ID__c,&apos;CON-NCA&apos;)),
            6,
            IF(
            OR(BEGINS(Google_Doc_ID__c,&apos;CON-SCA&apos;),BEGINS(Google_Doc_ID__c,&apos;NJ&apos;)),
            7,
            99
            )
            )
            )
            )
            )
            )
            )
            ,NULL
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Business_Since__c</fullName>
        <description>Date the customer first went into business.  This will provide a way to segment the market by age of the business.  Not to be confused with Anniversary Date.  Created by SS-3694.</description>
        <inlineHelpText>Input the date the customer first went into business.  Not to be mistaken for anniversary date with the knot.</inlineHelpText>
        <label>In Business Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <description>The reason an account went from active to inactive
            Plan to Deprecated for CSP-2731</description>
        <label>Inactive Reason(deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incorrect_Account_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether invalid parent error message was received during storefront fulfillment.  Informs whether to flag &quot;Ignore parent Account&quot;.</description>
        <label>Incorrect Account Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_in_Adv_in_Multiple_Categories__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Plan to Deprecated for CSP-2731
            Indicates vendor&apos;s interest in advertising in multiple categories  upon TKPro sign-up</description>
        <label>Interest in Adv in Multiple Categories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOA_Rep__c</fullName>
        <description>CSP-3178</description>
        <label>LOA Rep</label>
        <picklist>
            <picklistValues>
                <fullName>Jackie Ornellas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sarah Rucinski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jessie Reinsch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heather Dorsten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stacy Brambilia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cecelia Groark</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_AM_Transfer__c</fullName>
        <description>Last date the Account Owner was changed to an Account Manager</description>
        <label>Last AM Transfer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Contracted_Service_Date__c</fullName>
        <description>Was used in CRM Dynamics to capture the when the Last active contract in CES was going to end</description>
        <label>Last Contracted Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Live_Stamp_Date__c</fullName>
        <label>Last Live $ Stamp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadToAccountConversionFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Account originated as a Lead in the system</description>
        <label>LeadToAccountConversionFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Filter_Type__c</fullName>
        <formula>&apos;Referral&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source Filter Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Stamp_Date__c</fullName>
        <label>Live $ Stamp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Live_at_Every_Month__c</fullName>
        <description>Store the value from the start to the month before Last month</description>
        <label>Live at Every Month</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Live_at_Last_Month_Start__c</fullName>
        <description>CSP-3159 Last AM Transfer Date
Total Value of &quot;Live&quot; items as of the first of the last month</description>
        <label>Live $ at Last Month Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Live_at_Month_Start__c</fullName>
        <description>Total Value of &quot;Live&quot; items as of the first of the current month</description>
        <label>Live $ at Month Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LocalAccExec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Phase 1</description>
        <label>Local Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocalSalesMarket__c</fullName>
        <description>Phase 1</description>
        <label>Local Sales Market(deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>AK - Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL - Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR - Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Phoenix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ - Tucson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Central CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - Toronto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Orange County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Palm Springs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Sacramento/Tahoe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - San Fran/Bay Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Santa Barbara/Ventura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO - Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - DC/MD/Northern VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE - Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL - West Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Central Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Northern Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Savannah/Coastal Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA - Southern Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI - Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA - Iowa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active Status that was originally in CRM Dynamics and was brought over in the migration.
            Plan to Deprecated for CSP-2892</description>
        <label>Active(deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Paid_Status__c</fullName>
        <description>Plan to Deprecated for CSP-2731
            SF-613</description>
        <label>Local Paid Status(deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Unpaid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Market_Hubspot_Formula__c</fullName>
        <description>Textual copy of the value of Local Sales Market and surface it on a Hubspot Record&apos;s Company section</description>
        <label>Local Sales Market Hubspot Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Market__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Primary market the vendor operates in</description>
        <label>Local Sales Market</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only active Markets may be selected</errorMessage>
            <filterItems>
                <field>Market__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Longest_Past_Due_Date__c</fullName>
        <description>Calculates the amount of days between the past due date and today. Used in email templates including past due balance notifications</description>
        <label>Longest Past Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manual_VIP_Program_Status__c</fullName>
        <description>If the value in this field is not blank, this value will override the Account&apos;s &quot;VIP Program&quot; value</description>
        <inlineHelpText>If the value in this field is not blank, this value will override the Account&apos;s &quot;VIP Program&quot; value</inlineHelpText>
        <label>Manual VIP Program Status</label>
        <picklist>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not VIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketplace_Health_Color__c</fullName>
        <formula>CASE( Marketplace_Health_Number__c, 
1, IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f10000038QHA&amp;oid=00Dj0000000KVB8&quot;,&quot;Red&quot;,20,60), 
2, IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f10000038QHU&amp;oid=00Dj0000000KVB8&quot;,&quot;Blitz&quot;,20,60), 
3, IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f10000038QHP&amp;oid=00Dj0000000KVB8&quot;,&quot;Orange&quot;,20,60), 
4, IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f10000038QGv&amp;oid=00Dj0000000KVB8&quot;,&quot;Yellow&quot;,20,60), 
5, IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f10000038QHZ&amp;oid=00Dj0000000KVB8&quot;,&quot;Green&quot;,20,60), 
IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f10000038QH0&amp;oid=00Dj0000000KVB8&quot;,&quot;Grey&quot;,20,60) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketplace Health Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketplace_Health_Number__c</fullName>
        <formula>CASE( Primary_Category__r.Category_Code__c,
            &quot;ACC&quot;, Zip__r.ACC__c,
            &quot;ALP&quot;, Zip__r.ALP__c,
            &quot;BAR&quot;, Zip__r.BAR__c,
            &quot;BEA&quot;, Zip__r.BEA__c,
            &quot;BNB&quot;, Zip__r.BNB__c,
            &quot;BPH&quot;, Zip__r.BPH__c,
            &quot;BWP&quot;, Zip__r.BWP__c,
            &quot;CAL&quot;, Zip__r.CAL__c,
            &quot;CAT&quot;, Zip__r.CAT__c,
            &quot;CAC&quot;, Zip__r.CAC__c,
            &quot;CER&quot;, Zip__r.CER__c,
            &quot;DNC&quot;, Zip__r.DNC__c,
            &quot;DEC&quot;, Zip__r.DEC__c,
            &quot;DST&quot;, Zip__r.DST__c,
            &quot;DJS&quot;, Zip__r.DJS__c,
            &quot;ENS&quot;, Zip__r.ENS__c,
            &quot;FAV&quot;, Zip__r.FAV__c,
            &quot;JWL&quot;, Zip__r.JWL__c,
            &quot;FIT&quot;, Zip__r.FIT__c,
            &quot;FLO&quot;, Zip__r.FLO__c,
            &quot;HRB&quot;, Zip__r.HRB__c,
            &quot;INV&quot;, Zip__r.INV__c,
            &quot;LIT&quot;, Zip__r.LIT__c,
            &quot;MEN&quot;, Zip__r.MEN__c,
            &quot;NLW&quot;, Zip__r.NLW__c,
            &quot;OPC&quot;, Zip__r.OPC__c,
            &quot;PHB&quot;, Zip__r.PHB__c,
            &quot;REC&quot;, Zip__r.REC__c,
            &quot;REG&quot;, Zip__r.REG__c,
            &quot;RNT&quot;, Zip__r.RNT__c,
            &quot;SVS&quot;, Zip__r.SVS__c,
            &quot;SPV&quot;, Zip__r.SPV__c,
            &quot;TEC&quot;, Zip__r.TEC__c,
            &quot;TRA&quot;, Zip__r.TRA__c,
            &quot;TRV&quot;, Zip__r.TRV__c,
            &quot;VHV&quot;, Zip__r.VHV__c,
            &quot;VAR&quot;, Zip__r.VAR__c,
            &quot;VID&quot;, Zip__r.VID__c,
            &quot;BDS&quot;, Zip__r.BDS__c,
            &quot;WCK&quot;, Zip__r.WCK__c,
            &quot;DES&quot;, Zip__r.DES__c,
            &quot;WJW&quot;, Zip__r.WJW__c,
            &quot;WPH&quot;, Zip__r.WPH__c,
            &quot;PLN&quot;, Zip__r.PLN__c,
            0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketplace Health (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketplace_Health_Text__c</fullName>
        <formula>CASE( Marketplace_Health_Number__c,
            1, &quot;Minimal&quot;,
            2, &quot;Blitz&quot;,
            3, &quot;Balanced&quot;,
            4, &quot;Good&quot;,
            5, &quot;Excellent&quot;,
            &quot;Unknown&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates traffic health
Excellent:Sustains many new vendors. Proactive sale
Good:Sustains some new vendors. Proactive sale
Balanced:Sustains paid vendors. Reactive sale
Minimal:Cannot sustain paid vendors. Reactive sale
Unknown:Insufficient data</inlineHelpText>
        <label>Marketplace Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Radar_Brand_Id__c</fullName>
        <description>Unique ID of the customer in Media Radar database</description>
        <label>Media Radar Brand Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetroArea__c</fullName>
        <formula>Zip__r.MetroArea__r.Name</formula>
        <label>Metro Area</label>
        <type>Text</type>
    </fields>
</CustomObject>